examples/type_system/failing/36_pure_context_time_only_rejects_io.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// A3 matrix: typed `with Time` function rejects direct IO builtin call.

fn tick() -> Int with Time {
    print("tick")
    1
}

fn main() -> Unit with IO, Time {
    tick();
}
